[package]
name = "rustyasync"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.28.2", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
colored = "2.0.0"
chrono = "0.4.26"
lazy_static = "1.4.0"
regex = "1.8.4"
async-recursion = "1.0.4"